--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,15 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11743804.md#1" target="_blank">【拍案惊奇】不平夜全港乱战 传2人坠楼警在场</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11743804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191225666-150x120.jpg" align ="left"></a>正如大家在新闻上看到的，本来是平安夜，和开心的圣诞节日，但香港街头并不平安。这场抗争运动已经快满7个月了，从当晚的情况来看，势必要延续到新年。那么今天的节目，我们还是以专题形式推出，来回顾这一夜在香港，都发生了什么。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743680.md#1" target="_blank">中共染指中东 专家：华为是黑手</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743680.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1142487816-150x120.jpg" align ="left"></a>专家指出，华为公司是中国（中共）推动“数字丝绸之路”的骨干，中共政权正在利用该公司，企图在中东地区取得超越美国的地缘政治利益。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743683.md#1" target="_blank">【热点互动】美国防法案 暗制中共 明挺台湾</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743683.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e36b5f9a748a54_ttl7dayjJv_1bf1406358f778e0-150x120.jpg" align ="left"></a>美国国防法首度包含对台湾选举的关切，说明了什么？中美在军事领域的较量是否已拉开帷幕？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743757.md#1" target="_blank">大陆大中院校禁过圣诞节 民众如是说</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743757.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3b4189ed24155d1be1a3e612bc12b4ad-150x120.jpg" align ="left"></a>中共抵制圣诞节的政治运动被指愈演愈烈，已经从社区转向学校。从大中小学到幼儿园，禁止一切圣诞庆祝活动，中学生受到警告会被扣分，大学生则会被处分甚至拘留，引发学生不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743710.md#1" target="_blank">涉债务纠纷 北大方正逾11亿股被司法冻结</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743710.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/CFP435135368@1200x1200-150x120.jpg" align ="left"></a>北京大学控股国企北大方正集团持有的11亿股方正证券股份12月24日被司法冻结，冻结原因是涉及债务纠纷。北大方正深陷债务困境，其30亿美元债险些发生交叉违约，23日申请7只境外债券停牌，其中一只存在违约风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:01 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743343.md#1" target="_blank">冯小刚直播卖电影票 兴奋晒折后138元靴子</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743343.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/fengxiaogang-150x120.jpg" align ="left"></a>去年上映影片为零的大陆知名导演冯小刚，执导的新片《只有芸知道》日前上映。为了挽回低迷的票房，他除了带着主演们四处路演，还罕见地在直播间卖电影票。令网友感到意外的是，他在卖出15万张电影优惠券的同时，还兴奋地晒出自己花138元（人民币，下同）买的靴子，并称“与穿那些6,800元的没两样”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743616.md#1" target="_blank">港姐冠军徐子珊退出娱乐圈 拟移居欧洲读博士</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/171129070504100311-150x120.jpg" align ="left"></a>今年40岁的前港姐冠军徐子珊日前宣布，正式退出娱乐圈，并称自己已卖车卖楼，将移居欧洲并攻读心理学博士。消息令人震惊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:55 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743546.md#1" target="_blank">中共“民企新28条”被指难解“挤压效应”</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/75a70fcd7a4839039ab90af27688b9cf-150x120.jpg" align ="left"></a>中共官方最新发布的“民企新28条”被指在公有制经济下无法实现，当前大陆民营企业困境重重，受到国企的挤压，所面临的困难很难在短期内得到解决。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743575.md#1" target="_blank">湖南“12·4”大爆炸 死者家属：政府抢尸</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743575.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/23fef3cadf40c4b281820a324b857182-150x120.jpg" align ="left"></a>湖南省浏阳市碧溪烟花制造有限公司石下工区包装作业区域于12月4日7时许发生爆炸事故，造成13人死亡、13人受伤（其中重伤3人）。日前，当局通报了“12·4”事故情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743400.md#1" target="_blank">纳瓦罗：贸易协议意味着2020美经济繁荣</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_14J2M9-150x120.jpg" align ="left"></a>白宫贸易顾问彼得·纳瓦罗（Peter Navarro）周二（12月24日）表示，中美第一阶段贸易协议、美国-墨西哥-加拿大协议（USMCA）以及即将与日本、韩国达成协议的成功，加上《2020财年国防授权法案》，一起将预示着2020年美国经济的“繁荣”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank">【2019盘点】中共军事扩张 难挽危局</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1804260453522378-150x120.jpg" align ="left"></a>2019年中共军事领域动作频繁。在庞大的军费支撑下，首艘自制航母服役、北斗三号全球系统核心星座建成等，标志着中共军队武器装备系统和国防科工系统的持续扩张；两次大阅兵、军改后的首部国防白皮书、强化南海军事部署、升级对台军事威胁等等，将其全球野心暴露无遗；中俄军事合作提升，中美军事竞争加剧，而中共仍强硬拒绝参加中美俄三方军备控制谈判；“军改”进入“第三战役”，举.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743447.md#1" target="_blank">江苏银行免费为储户磨刀 次日活动竟被取消</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743447.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-457504892-150x120.jpg" align ="left"></a>“银行门还没开，一帮人手里都拎着一把刀具，跃跃欲试地盯着门里面……”，这并非是电影中抢劫银行的片段，而是无锡市一家银行愿为储户免费磨刀，在发出邀请后即将上演的场景。但时隔不久，这项活动突然被叫停。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742592.md#1" target="_blank">中共不可靠 布拉格市长：与其打交道应三思</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X6508-150x120.jpg" align ="left"></a>捷克首都布拉格市长贺瑞普（Zdeněk H?ib）反对中共对台湾的“一中条款”，并取消与北京姐妹市的关系，改与台北缔结姐妹市。贺瑞普在近日投书美国媒体，提到他从与中共的外交关系中学到两件事情，而他也得出一项结论，“中共是不可靠的商业伙伴，也是一个充满怨恨的群体。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741100.md#1" target="_blank">人权问责法效应 中共迫害者被举报到海外</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-18-150x120.jpg" align ="left"></a>自《通告》发布后，明慧网收到大量的对参与迫害法轮功的中共高官、政法委和“610”人员、法官、检察官、派出所所长等等的举报信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:42 AM							</td></tr>
@@ -29,7 +18,18 @@
 12月20至22日，神韵国际艺术团在纽约州帕切斯市的帕切斯学院表演艺术中心（The Performing Arts Center at Purchase College）拉开2020新演季帷幕。神韵今年的全新节目同样给新老观众带来惊喜，他们对每一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741624.md#1" target="_blank">【翻墙必看】北大教授：七常委先公示财产</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741624.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/130330204429941-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742705.md#1" target="_blank">鸿茅药业获明星企业奖 网民：挑战中国人智商</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/1804190305481758-150x120.jpg" align ="left"></a>曾被指为“毒酒”的“鸿茅药酒”，其公司鸿茅药业，日前被授予“2018年度履行社会责任明星企业”荣誉称号。网民嘲讽，这是在挑战中国人民的智商！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:31 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742739.md#1" target="_blank">抗争半年多 港人迎来圣诞节 叹 “太沉重”</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742739.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/photo_2019-12-23_22-12-02-150x120.jpg" align ="left"></a>12月24日是香港反送中运动持续半年多以来迎来的首个圣诞平安夜。港人表示，这个圣诞节不会快乐，但会作为发声的机会聚会互祝平安，并向失去自由的手足传递“不会忘记你们”的信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742615.md#1" target="_blank">王思聪还钱和解 多条限制消费禁令被解除</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/123-150x120.jpg" align ="left"></a>万达集团董事长王健林儿子王思聪，早前因合同纠纷案，被中共多个法院执行限制消费令。目前，案件双方已达成和解，法院正在解除对王思聪的限制消费令。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742493.md#1" target="_blank">网文：大陆汽车行业艰难的两大看点</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742493.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg" align ="left"></a>大陆汽车行业今年深陷泥潭，销量下滑，车企亏损不断加大，那么车企到底艰难在什么地方呢？“康斯坦丁”对此作了解释。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741818.md#1" target="_blank">中共否认强制外籍囚犯劳动 狡辩难掩罪行</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741818.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>中共一句“负责任地告诉你”，非但不会消除外界的疑虑，反而证实了指控的真实性。因为中共玩弄法律、谎话连篇、突破道德良知底线，完全不负责任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:57 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/140826125810100311-600x400-150x120.jpg" align ="left"></a>他经营网络赌球及百家乐博彩生意，有着稳定的下线代理和赌徒会员，还有为他算账、收账、放高利贷平帐的团队，这为他带来每月好几十万的收入。更多时间，他都是在吃喝玩乐中结交人脉，为新的生意创造合作机会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:52 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742305.md#1" target="_blank">网文：央行钱印出来了 借钱的人没了</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/04/90418184623459-150x120.jpg" align ="left"></a>中国货币始终保持高速增长，2019年9月广义货币已经达到195.23万亿人民币。但是大陆的经济状况不佳，借债的是三大主体债务繁重，结果钱印出来了，借钱买的人却没了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742110.md#1" target="_blank">发表撑港灭共言论 大陆多名公民遭刑拘</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742110.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13836324-1-150x120.jpg" align ="left"></a>近日，大陆多名公民因在网上发表撑港、灭共等言论，遭到当地警方以涉嫌“寻衅滋事”的罪名拘留。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741848.md#1" target="_blank">网传赖小民将百名情妇安置同一小区</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741848.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/160705084919100615-600x398-1-150x120.jpg" align ="left"></a>已被起诉的“华融集团”前党委书记兼董事长赖小民的淫乱史继续被曝光。有知情人士再曝，赖小民曾为百名情妇在企业内安插职位，甚至将所有情妇都安置在同一社区，社区里的孩子都喊他“爸爸”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 2:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741515.md#1" target="_blank">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741515.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/online-shopping-1082728_640-150x120.jpg" align ="left"></a>最近，英国海关当局查获了价值近300万英镑（约390万美元）的假冒商品，这些假冒品是从中国运往英国，包括巴宝莉、香奈儿等假冒的奢侈品牌商品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 12:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743385.md#1" target="_blank">王毅马云最新表述 佐证中共经济遇严重寒冬</a><br></h3>香港的一位企业家周先生表示，中国被认为世界第二大经济体，为何王毅会这样谦虚？道出背后原因，其实中共经济问题严重，已没可用外汇储备，“在三万一千亿美金储备中，中国祇有四千五百亿美金可用，其实依照日本的报告，中国现在是负1.5万亿美金外债，根本无外汇储备。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 2:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11740664.md#1" target="_blank">法轮功学员孙凤华遭绑架命危 数月后离世</a><br></h3>哈尔滨市法轮功学员孙凤华于9月11日被哈尔滨市铁路公安局直属派出所警察绑架，当时血压高达240，出现生命危险。第二天警察通知家属把她接走。回家3个月后，她于12月9日离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742514.md#1" target="_blank">涉金融犯罪 122名中国人被尼泊尔警方逮捕</a><br></h3>12月24日，尼泊尔警方表示已逮捕了122名中国籍公民。中共外交部发言人耿爽在例行记者会上被问及此事时称，这些人涉嫌从事跨境网络诈骗活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:53 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742586.md#1" target="_blank">河南信阳一载客31人大巴翻车 致2死多伤</a><br></h3>12月24日，河南信阳市一辆大巴在107国道柳林乡路段上，疑失控冲出路基后侧翻，导致2死多伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/sloxqr240/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sloxqr240/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
