--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750592.md#1">【翻墙必看】中共到了最后解体的时刻？</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750404.md#1">日大型钢企“日本制铁”计划关闭大陆工厂</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750108.md#1">【新闻看点】台大选前 中共出动航母文攻武吓</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743793.md#1">【独家】大陆医生亲历不寻常器官移植手术（上）</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749711.md#1">【新闻看点】美中经济两重天 川普：与习签协议</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750049.md#1">郭台铭急改口：自己是红媒最大受害者</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749909.md#1">恐金融风险 中共2年任命12金融副省长??</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749146.md#1">“香港警暴展”全球接力 台中连侬墙全台首展</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750395.md#1">贸易战暂休战 美中经济关系仍会部分脱钩</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749953.md#1">首导片《后来的我们》胜诉 刘若英喊理直气壮</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br>
