--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750581.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/15e4678d97207c6d_ttl7day5N1_tn1227-320x200.jpg">【拍案惊奇】香港水源是否完全依赖大陆？</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750485.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-505204462-320x200.jpg">红色资金介入大选 台查获最大两岸地下汇兑</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737119.md#1">大陆江湖为何“底朝天” 专家揭秘（上）</a><br>
@@ -9,6 +9,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738852.md#1">圣诞卡求救信发酵 乐购暂停从中国进货</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11739024.md#1">传中共红三代涉持枪强奸下属 警方不调查</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750697.md#1">袁斌：“细颈瓶”成敏感词 折射中共末日心态</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750032.md#1">程晓农：经济全球化的中共陷阱</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749651.md#1">【2019盘点】中共社会监控的极端化</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748249.md#1">任世豪：中共颠倒是非善恶</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748135.md#1">廖祖笙：党天下法治和德治皆为无本之木</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748133.md#1">陈思敏：向日本国会议员行贿的中企有何背景</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747307.md#1">周晓辉： 川习再次会面与英国预言家的预言</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
@@ -30,8 +30,8 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750581.md#1">【拍案惊奇】香港水源是否完全依赖大陆？</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750592.md#1">【翻墙必看】中共到了最后解体的时刻？</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750485.md#1">红色资金介入大选 台湾查获最大两岸地下汇兑</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750404.md#1">日大型钢企“日本制铁”计划关闭大陆工厂</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750108.md#1">【新闻看点】台大选前 中共出动航母文攻武吓</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743793.md#1">【独家】大陆医生亲历不寻常器官移植手术（上）</a><br>
