--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,7 +7,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737305.md#1">马云卸任后 在湖北获“新职”</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741034.md#1">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738852.md#1">圣诞卡求救信发酵 乐购暂停从中国进货</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11739024.md#1">传中共红三代涉持枪强奸下属 警方不调查</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751013.md#1">廖祖笙：周永康余孽在不断寻衅滋事</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750943.md#1">吴惠林：再谈2019年诺贝尔经济学奖</a><br>
@@ -50,10 +50,10 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750093.md#1">小苹果为醒醒唱生日歌 章子怡汪峰赞美妙动听</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749953.md#1">首导片《后来的我们》胜诉 刘若英喊理直气壮</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750070.md#1">中国年轻人债台高筑 为何中共最不乐见</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749554.md#1">1月大选投给谁 台湾商界及年轻一代在权衡</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750266.md#1">替儿还债？王思聪母亲15家公司被注销</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750216.md#1">中国褐皮书：陆企现金流恶化 影子贷款再增</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750070.md#1">中国年轻人债台高筑 为何中共最不乐见</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750237.md#1">黑龙江厅官大肆敛财 八年送女儿两千万现金</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750227.md#1">红三代卷入性侵女留学生案？红二代辟谣</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播预告】2020元旦游行 民阵：毋忘承诺</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 348,762,304 人
+- 共 348,764,891 人
 ```
 </strong>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
