--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -18,6 +18,7 @@
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 5:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737513.md#1" target="_blank">颜丹：清华北大的丑闻与复旦的新章程</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737513.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/363985048_a1a0fae674_b-600x400-1-150x120.jpg" align ="left"></a>如今，清华、北大已处在风口浪尖，复旦大学如此迎头赶上，是想证明自己同样是出产骗子、流氓的行家里手吗？阉割自由与真理之后，复旦与清华、北大之间，无需再争高下。步清华、北大的后尘，复旦也将同样被沦为世界的笑柄。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 3:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11736666.md#1" target="_blank">任世豪：岁末看反迫害前景</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11736666.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/931fe311b37bc9ca2ac0a6b2511b0b60-150x120.jpg" align ="left"></a>时光飞逝，又值岁末。回顾即将过去的二零一九年，世事纷杂如棋。但只静心澄虑，便见脉络清晰。中共对法轮功的非法迫害，倏忽已经持续二十年。风雨如晦，法轮功学员依旧锲而不舍的讲清真相，继续引领着世人反迫害。鉴往知来，前景可期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11740256.md#1" target="_blank">陈思敏：中共农村工作会议难掩农村基建腐败</a><br></h3>中共中央农村工作会议已于12月20日至21日召开。本次会议研究部署2020年“三农”工作，但依然是老调重弹要“加大力度”农村基建，并多次提及了水利等基础设施建设的目标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11739956.md#1" target="_blank">云鹤天：卜算子?垂死挣扎</a><br></h3>复旦改章程，
 学校邪灵控。
 临死之前毒爪伸，
@@ -53,6 +54,5 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737704.md#1" target="_blank">廖祖笙：全面失控可能袭向习近平</a><br></h3>全面失控可能袭向习近平，这不是危言耸听，而是有种种显见的迹象......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 6:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706339.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（10）</a><br></h3>亚氏逻辑学与近代科学的实证方法是密切相关的。近代科学各门学科的实验和观察基本上可以归结为如下的过程：确定一对实验或观察对象和观察者，以及对象和观察者之间的某种作用——观察方式，所有的观察都可以用这种抽象的作用来表述。可以用定量方式描述的观察实际上是针对一种非常特殊的{对象，观察者，作用}的组合。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11736839.md#1" target="_blank">项云：痞子流氓无赖思维行为方式一直是中共武器</a><br></h3>今天中共对国内百姓就像在香港一样明火执仗，剥掉过去所有伪装，各领域全面赤膊上阵赤裸裸对百姓“痞子流氓无赖”式欺压。过去好话说尽坏事做绝，现在好话欺骗程序全无，直接对人民抢夺榨取或打杀，其实这才是中共真实面目。中共欺骗手段已经图穷匕见，人民不再买账才凶相毕露。当然这是亡党末日疯狂，共产内部明白人此时应该像王立强那样弃暗投.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:52 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11736962.md#1" target="_blank">心升：从《矛盾论》《实践论》的谬误揭去毛泽东哲学家的面纱</a><br></h3>人们把毛泽东的《矛盾论》、《实践论》看成是伟大的哲学著作，倍加推崇，甚至在否定他的人格时还认为他的哲学水平是不容置疑的。其实这完全是被他那套偷天换日、偷换概念、偷梁换柱的邪恶伎俩欺骗了。在矛盾论中，一上来就谈到两种宇宙观的问题，毛泽东在此用形而下学的表现，（他没有提到形而下学这个名词，可是，他名为说形而上学的表现，实际.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/sloxqr240/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sloxqr240/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
